cmake_minimum_required(VERSION 2.6)
project (concorrente-ep2 CXX)
if(MSVC)
    add_definitions("/W4 /D_CRT_SECURE_NO_WARNINGS")
elseif(CMAKE_COMPILER_IS_GNUCXX)
    add_definitions("-Wall -ansi -pedantic")
endif()
add_executable(concorrente-ep2 main.cc)
if(WIN32)
    TARGET_LINK_LIBRARIES(concorrente-ep2 pthread_dll)
else(WIN32)
    TARGET_LINK_LIBRARIES(concorrente-ep2 pthread)
endif(WIN32)